# runpod-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: chat.rs  lib.rs  test.rs
src/backend/: backend.rs  mod.rs  sdv1.rs  sdv2.rs  sdxl.rs  vllm.rs
src/client/: client.rs
src/examples/: chatvllm.rs  diffuse.rs  diffusev1.rs
