[package]
name = "runpod-client"
version = "0.1.0"
edition = "2021"

[features]
chat_vllm = []
diffuse_v1 = []

[lib]
name = "rpc"
path = "src/lib.rs"

[[bin]]
name = "simplechat"
path = "src/examples/chatvllm.rs"
required-features = ["chat_vllm"]

[[bin]]
name = "diffusev1"
path = "src/examples/diffusev1.rs"
required-features = ["diffuse_v1"]

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.77"
reqwest = { version = "0.11.*", features = ["json"] }
serde = { version="1.0.*", features=["derive"] }
serde_json = "1.0.114"
tokio = {version = "1.36.*", features = ["full"]}
