[package]
name = "runpod-client"
version = "0.1.0"
edition = "2021"

[features]
chat = []
diffuse = []

[lib]
name = "rpc"
path = "src/lib.rs"

[[bin]]
name = "chat"
path = "src/examples/chat.rs"
required-features = ["chat"]

[[bin]]
name = "diffuse"
path = "src/examples/diffuse.rs"
required-features = ["diffuse"]

[dependencies]
anyhow = "1.0.81"
async-trait = "0.1.77"
reqwest = { version = "0.11.*", features = ["json"] }
serde = { version="1.0.*", features=["derive"] }
serde_json = "1.0.114"
tokio = {version = "1.36.*", features = ["full"]}
log = "0.4.*"
